--- a/assets/css/habilidade.css
+++ b/assets/css/habilidade.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     align-content: space-between;
+    flex-wrap: wrap;
     font-size: 16px;
     font-weight: bold;
 }
